--- a/samples/Components.Sample/Components/Layout/NavMenu.razor
+++ b/samples/Components.Sample/Components/Layout/NavMenu.razor
@@ -5,6 +5,7 @@
         <FluentNavMenu Id="main-menu" Collapsible="true" Width="250" Title="Navigation menu" @bind-Expanded="expanded" CustomToggle="true">
             <FluentNavLink Href="/" Match="NavLinkMatch.All" Icon="@(new Icons.Regular.Size20.Home())" IconColor="Color.Accent">Home</FluentNavLink>
             <FluentNavLink Href="jobs" Icon="@(new Icons.Regular.Size20.NumberSymbolSquare())" IconColor="Color.Accent">Jobs</FluentNavLink>
+            <FluentNavLink Target="_blank" Href="/_docs" Icon="@(new Icons.Regular.Size20.NumberSymbolSquare())" IconColor="Color.Accent">Documentation</FluentNavLink>
         </FluentNavMenu>
     </nav>
 </div>
